Arc 2.0/Chrome CSS/general.css
@-moz-document url-prefix("chrome:") {
  /* ------------------------- GENERAL ZEN UI ------------------------- */
  /*Web View border extra rounded*/
  .browserContainer {
  background: linear-gradient(
    90deg,
    transparent 0%,
    transparent 100%
  );
}
  
  /* main ui tint */
  #zen-main-app-wrapper {
    background: var(--nebula-ui-tint) !important;
  } 

  /* Hide identity label for Bonjourr */
  #identity-icon-label[value="Extension (Bonjourr · Minimalist Startpage)"] {
    display: none !important;
  }
  
  :root {
    --attention-dot-color: transparent !important; /* remove attention dot */
    --zen-themed-toolbar-bg-transparent: transparent !important; /* fix for transparency */
  }
  
  /* Config for blur rendering */
  @media (-moz-pref("arc.force-blur-rendering", true)) {
  browser {
      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
  }
  }
  /* --------------------- TABS: NO SHADOW --------------------- */
  
  hbox.browserSidebarContainer,
  #zen-tabbox-wrapper {
    @media (-moz-pref("arc-tabs-no-shadow")) {
      box-shadow: none !important;
    }
  }
  
  /* ---------------------- NOGAPS MOD ------------------------ */
  
  @media (-moz-pref("arc-nogaps-mod")) {
    [zen-single-toolbar="true"] {
      #zen-appcontent-wrapper {
        position: relative;
      }
  
      #zen-appcontent-navbar-wrapper {
        position: absolute;
        width: 100% !important;
        height: 50px; /* Optional: thicker navbar */
        backdrop-filter: blur(30px) saturate(110%) contrast(110%);
        background: var(--zen-main-browser-background) !important;
        border-bottom: 1.7px solid light-dark(rgba(0, 0, 0, 0.2), rgba(255, 255, 255, 0.1));
      }
  
      #zen-tabbox-wrapper {
        margin: 0 !important;
      }
  
      .browserSidebarContainer {
        border-radius: 0px !important;
        box-shadow: none !important;
      }
    }
  }
  
  /* ----------------- NOGAPS COMPACT MOD ----------------- */
  
  @media (-moz-pref("arc-nogaps-compact-mod")) {
    :root[zen-compact-mode="true"]:not([customizing]) {
        #zen-appcontent-wrapper:not(:has(#tabbrowser-tabpanels[zen-split-view]), :has(#zen-sidebar-web-panel:not([hidden]):not([pinned]))) {
            margin: 0 !important;
  
            #zen-tabbox-wrapper {
                margin: 0 !important;
            }
  
            @media (-moz-pref("zen.view.use-single-toolbar")) {
              #zen-appcontent-wrapper {
                  position: relative;
              }
  
      #zen-appcontent-navbar-wrapper {
        position: absolute;
        width: 100% !important;
        height: 50px; /* Optional: thicker navbar */
        backdrop-filter: blur(30px) saturate(110%) contrast(110%);
        background: var(--zen-main-browser-background) !important;
        border-bottom: 1.7px solid light-dark(rgba(0, 0, 0, 0.2), rgba(255, 255, 255, 0.1));
      }
            }
        }
    }
  }
  
  /* ------------------- FLOATING STATUSBAR ------------------- */
  #statuspanel {
    margin: 10px !important;
  }
  
  #statuspanel-label {
    border-radius: 11px !important;
    padding: 3px 10px !important;
    border: 1px solid var(--zen-colors-border) !important;
    background: light-dark(rgba(255, 255, 255, 1), rgba(0, 0, 0, 0.9)) !important;
  }
}

@media (-moz-pref("arc-transparent-glance")) {
  
  /* Transparent glance styling */
  .zen-glance-background > vbox {
    mask-image: linear-gradient(
      to right,
      black 0%,
      black 4%,
      transparent 7%,
      transparent 93.5%,
      black 96%,
      black 100%
    );
    mask-repeat: no-repeat;
    mask-size: 100% 100%;
  }
  
  .zen-glance-overlay > vbox {
    background-color: light-dark(#fff7, #0007) !important;
    margin-top: 0.5% !important;
    margin-bottom: 0.5% !important;
    height: 98% !important;
    border-radius: 1.5em !important;
  }
}

/* -------Removes scrollbar in tab panel and also adds fade effect -------- */ 
@media not (-moz-pref("arc-urlbar-fade-in")){
    #zen-tabs-wrapper {
        mask-image: linear-gradient(to bottom, transparent, black 20px, black calc(100% - 20px), transparent 100%) !important;
    }
}
#zen-tabs-wrapper {
    scrollbar-width: none !important;
    -ms-overflow-style: none !important;
    overflow-y: auto !important;
}

#zen-tabs-wrapper::-webkit-scrollbar {
    display: none !important;

}

/* === BETTER CUSTOMIZE TOOLBAR === */

#customization-container {
  position: absolute;
  z-index: 1;
  bottom: 10px;
  right: 10px;
  height: 80%;
  width: 70%;
  border-radius: 12px;
 
  padding: 10px;
  background: light-dark(rgba(255,255,255,0.32),rgba(0,0,0,0.3)) !important;
}

@media (-moz-pref: "zen.tabs.vertical.right-side") {
  #customization-container {
    left: 10px;
  }
 
  #customization-container #customization-content-container {
    flex-direction: row-reverse;
  }
}

#customization-container #customization-panel-container {
  padding: 10px !important;
}


#customization-container #customization-panelWrapper {
  --panel-arrow-offset: 0px;
}

#customization-container .panel-arrowbox {
  display: none !important;
}

#customization-container .panel-arrowcontent {
  height: 100% !important;
  background: light-dark(rgba(255,255,255,0.8),rgba(0,0,0,0.4)) !important;
  border: none !important;
  margin: 0px !important;
  border-radius: 8px;
}


/* Check when the width is low */
@media (max-width: 700px) { /* Adjust the threshold as needed */
  #customization-container {
    border: 2px solid red; /* Temporary visual indicator */
  }
}

